. [Github] The issues hyperlink should right align

--- a/src/main/webapp/less/GithubRepositories.less
+++ b/src/main/webapp/less/GithubRepositories.less
@@ -62,6 +62,14 @@
 		margin:0 5px 0 5px;
 		font:normal normal normal 15px arial;
 	}
+
+	.issues{
+		cursor:pointer;
+		color:#68AABE;
+		float:right;
+		margin:0 5px 0 5px;
+		font:normal normal normal 15px arial;
+	}
 	
 	.createdownload{
 		cursor:pointer;
